--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Tiny Two Project Manager</title>
         <meta charset="utf-8" />
-
+        <script src="https://use.fontawesome.com/ab9ca9a237.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,600,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
