styles: add different UI state for completed tasks, add checkmark animation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
         <script src="https://use.fontawesome.com/ab9ca9a237.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,600,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="/assets/stylesheets/animate.css">
     </head>
     <body>
         <div class="container-fluid" id="root">
