--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Tiny Two Project Manager</title>
         <meta charset="utf-8" />
         <script src="https://use.fontawesome.com/ab9ca9a237.js"></script>
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,600,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,300italic,600,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/assets/stylesheets/animate.css">
     </head>
     <body>
