feat: updated logo text placement, added logo image

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tiny Two Project Manager</title>
+        <title>Tiny Two Productivity Manager</title>
         <meta charset="utf-8" />
         <script src="https://use.fontawesome.com/ab9ca9a237.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,300italic,600,700' rel='stylesheet' type='text/css'>
