--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <meta charset="utf-8" />
         <script src="https://use.fontawesome.com/ab9ca9a237.js"></script>
         <link rel="icon" href="favicon.png" type="image/png">
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,300italic,600,700' rel='stylesheet' type='text/css'>
-        <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet">
+        <!-- TODO : optimize the font weights for load time -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet"> -->
         <link rel="stylesheet" type="text/css" href="/assets/stylesheets/animate.css">
     </head>
     <body>
